--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ input {
   color: #fff;
   background-color: transparent;
   border: none; }
+  input[type=radio] {
+    display: none; }
 
 .header {
   box-sizing: border-box;
@@ -34,7 +36,7 @@ input {
     width: 20%;
     margin-bottom: 5px; }
   .header .title {
-    font-size: 24px; }
+    font-size: 36px; }
 
 .container {
   width: 800px;
@@ -71,17 +73,18 @@ input {
       text-align: left;
       padding: 30px; }
       .view-selection .character-nickname {
-        font-size: 18px;
+        font-size: 24px;
         margin-bottom: 5px; }
       .view-selection .character-name {
-        font-size: 24px;
+        font-size: 36px;
         margin-bottom: 10px; }
       .view-selection .character-note {
         font-size: 16px;
         line-height: 20px; }
       .view-selection .character-face {
         width: 300px;
-        height: 100%; }
+        height: 100%;
+        object-fit: cover; }
 
 .panel {
   box-sizing: border-box;
