--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,17 @@
+@keyframes button {
+  50% {
+    transform: scale(0.98); }
+  to {
+    transform: scale(1); } }
+
+@keyframes selected {
+  0% { }
+  90% { }
+  to { } }
+
 html, body {
   width: 100%;
   color: #fff;
-  background-color: #333;
   font-size: 16px;
   font-family: "Noto Serif SC", serif; }
 
@@ -28,21 +38,26 @@ input {
   input[type=radio] {
     display: none; }
 
+body {
+  background-color: black; }
+
+.container {
+  background-color: #333;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center; }
+
 .header {
   box-sizing: border-box;
   text-align: center;
   margin-bottom: 10px; }
   .header .logo {
-    width: 20%;
+    width: auto;
+    height: 150px;
     margin-bottom: 5px; }
   .header .title {
     font-size: 36px; }
-
-.container {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center; }
 
 .view {
   margin-bottom: 20px;
@@ -57,6 +72,23 @@ input {
     height: 100%;
     z-index: 2;
     object-fit: cover; }
+    .view-initial .message {
+      font-size: 30px;
+      color: #CC3535;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      object-fit: cover; }
+    .view-initial .image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      object-fit: cover; }
   .view-selection {
     position: absolute;
     top: 0;
@@ -74,16 +106,17 @@ input {
       padding: 30px; }
       .view-selection .character-nickname {
         font-size: 24px;
-        margin-bottom: 5px; }
+        margin-bottom: 10px; }
       .view-selection .character-name {
         font-size: 36px;
-        margin-bottom: 10px; }
+        margin-bottom: 15px; }
       .view-selection .character-note {
         font-size: 16px;
         line-height: 20px; }
       .view-selection .character-face {
         width: 300px;
         height: 100%;
+        margin-right: 30px;
         object-fit: cover; }
 
 .panel {
@@ -102,8 +135,11 @@ input {
     margin-right: -5px; }
     .panel-group .panel {
       margin-right: 5px; }
+  .panel-title {
+    font-size: 24px;
+    margin-bottom: 20px; }
   .panel-text {
-    margin-bottom: 10px; }
+    margin-bottom: 15px; }
   .panel-fighter {
     width: calc(25% - 5px); }
   .panel-image {
@@ -115,7 +151,8 @@ input {
   font-size: 20px;
   border: 2px solid #E4E4E4;
   border-radius: 5px;
-  padding: 15px 20px; }
+  padding: 15px 20px;
+  position: relative; }
   .btn-inactive {
     cursor: not-allowed;
     background: -moz-radial-gradient(#DBD7D7, #717171);
@@ -126,6 +163,24 @@ input {
     background: -moz-radial-gradient(#C85353, #642A2A);
     background: -webkit-radial-gradient(#C85353, #642A2A);
     background: radial-gradient(#C85353, #642A2A); }
+    .btn-active.animated {
+      animation: button 1s ease-out infinite; }
+  .btn::before, .btn::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 5px;
+    background-color: #C85353;
+    border: 1px solid #642A2A;
+    z-index: 100;
+    transform: translate3d(0, 0, 0); }
+  .btn::before {
+    animation: button 2s ease-out infinite; }
+  .btn::after {
+    animation: button 2s ease-out 1s infinite; }
 
 .footer {
   height: 80px;
