--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-@keyframes button {
-  50% {
-    transform: scale(0.98); }
-  to {
-    transform: scale(1); } }
-
-@keyframes selected {
-  0% { }
-  90% { }
-  to { } }
-
 html, body {
   width: 100%;
   color: #fff;
@@ -46,7 +35,10 @@ body {
   width: 800px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  height: 1200px; }
 
 .header {
   box-sizing: border-box;
@@ -147,6 +139,12 @@ body {
     height: 100%;
     object-fit: cover; }
 
+@keyframes button {
+  50% {
+    transform: scale(0.98); }
+  to {
+    transform: scale(1); } }
+
 .btn {
   font-size: 20px;
   border: 2px solid #E4E4E4;
@@ -181,6 +179,133 @@ body {
     animation: button 2s ease-out infinite; }
   .btn::after {
     animation: button 2s ease-out 1s infinite; }
+
+@keyframes cutin {
+  from {
+    opacity: 0; }
+  25% {
+    opacity: 1;
+    z-index: 3; }
+  90% {
+    opacity: 1;
+    z-index: 3; }
+  to {
+    z-index: -1;
+    opacity: 0; } }
+
+@keyframes cutin-enemy {
+  from {
+    transform: translate(100%);
+    opacity: 0; }
+  15% {
+    transform: translate(0);
+    opacity: 1; }
+  90% {
+    transform: translate(0);
+    opacity: 1; }
+  to {
+    transform: translate(-100%);
+    opacity: 0; } }
+
+.cutin {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); }
+  .cutin.show {
+    animation: cutin 2s ease-out; }
+  .cutin-enemy {
+    transform: translate(100%);
+    animation: cutin-enemy 2s ease-out;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    background-color: #CC3535; }
+    .cutin-enemy .img {
+      height: 500px;
+      object-fit: contain;
+      object-position: 50% -50%;
+      z-index: 2; }
+    .cutin-enemy .telop {
+      color: #CC3535;
+      background-color: #000;
+      padding: 15px; }
+      .cutin-enemy .telop .nickname {
+        font-size: 30px;
+        margin-bottom: 10px; }
+      .cutin-enemy .telop .name {
+        font-size: 36px; }
+
+.gauge {
+  width: 100%;
+  height: 20px;
+  background-color: #fff;
+  border: 3px solid #DADADA;
+  border-radius: 20px; }
+  .gauge-remain {
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    border: 1px solid #707070; }
+    .gauge-remain-hp {
+      background: -moz-linear-gradient(#F8F080, #B8AF3C);
+      background: -webkit-linear-gradient(#F8F080, #B8AF3C);
+      background: linear-gradient(#F8F080, #B8AF3C); }
+    .gauge-remain-rethal {
+      background: -moz-linear-gradient(#45DF34, #D8FFD2);
+      background: -webkit-linear-gradient(#45DF34, #D8FFD2);
+      background: linear-gradient(#45DF34, #D8FFD2); }
+
+.battle-window {
+  height: 700px;
+  position: relative;
+  padding-left: 15px;
+  padding-right: 15px; }
+  .battle-window .enemy-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    margin-bottom: 5px; }
+    .battle-window .enemy-info .name, .battle-window .enemy-info .hp {
+      display: block;
+      font-size: 24px; }
+  .battle-window .enemy-img {
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    object-fit: contain; }
+  .battle-window .history {
+    height: 150px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: -moz-linear-gradient(#B6B4B4, #5B5A5A);
+    background: -webkit-linear-gradient(#B6B4B4, #5B5A5A);
+    background: linear-gradient(#B6B4B4, #5B5A5A);
+    border: 3px solid #DADADA;
+    border-radius: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 10px;
+    overflow-y: scroll; }
+    .battle-window .history-text {
+      font-size: 18px;
+      line-height: 27px;
+      text-align: left; }
+
+.status-window {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px; }
+  .status-window .fighter-face {
+    width: 35%; }
+  .status-window .fighter-status {
+    width: 65%; }
 
 .footer {
   height: 80px;
