--- a/css/style.css
+++ b/css/style.css
@@ -28,34 +28,51 @@ input {
     display: none; }
 
 body {
-  background-color: black; }
+  background-color: black;
+  scroll-behavior: smooth; }
 
 .container {
+  box-sizing: border-box;
   background-color: #333;
   width: 800px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   position: relative;
-  overflow: hidden;
-  height: 1200px; }
+  overflow: hidden; }
+  @media screen and (max-width: 414px) {
+    .container {
+      width: 100%;
+      height: 100vh; } }
 
 .header {
   box-sizing: border-box;
   text-align: center;
-  margin-bottom: 10px; }
-  .header .logo {
+  padding-bottom: 10px; }
+  .header-logo {
     width: auto;
     height: 150px;
     margin-bottom: 5px; }
-  .header .title {
+  .header-title {
     font-size: 36px; }
+  @media screen and (max-width: 414px) {
+    .header {
+      height: 20vh;
+      margin-bottom: 0; }
+      .header-logo {
+        height: 75%; }
+      .header-title {
+        font-size: 6.5vw; } }
 
 .view {
-  margin-bottom: 20px;
   height: 300px;
+  margin-bottom: 20px;
   position: relative;
   overflow: hidden; }
+  @media screen and (max-width: 414px) {
+    .view {
+      height: 30%;
+      margin-bottom: 10px; } }
   .view-initial {
     position: absolute;
     top: 0;
@@ -73,6 +90,10 @@ body {
       transform: translate(-50%, -50%);
       z-index: 2;
       object-fit: cover; }
+      @media screen and (max-width: 414px) {
+        .view-initial .message {
+          font-size: 24px;
+          white-space: nowrap; } }
     .view-initial .image {
       position: absolute;
       top: 0;
@@ -110,12 +131,31 @@ body {
         height: 100%;
         margin-right: 30px;
         object-fit: cover; }
+      @media screen and (max-width: 414px) {
+        .view-selection .character {
+          width: 55%;
+          padding: 15px; }
+          .view-selection .character-nickname {
+            font-size: 14px;
+            margin-bottom: 5px; }
+          .view-selection .character-name {
+            font-size: 30px;
+            margin-bottom: 10px; }
+          .view-selection .character-note {
+            font-size: 14px; }
+          .view-selection .character-face {
+            width: 50%;
+            position: absolute;
+            right: 0;
+            z-index: -1;
+            margin-right: 0; } }
 
 .panel {
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
   margin-bottom: 10px;
+  margin-right: 5px;
   transition: .5s;
   cursor: pointer; }
   .panel:hover {
@@ -125,19 +165,32 @@ body {
     justify-content: center;
     height: 300px;
     margin-right: -5px; }
-    .panel-group .panel {
-      margin-right: 5px; }
   .panel-title {
     font-size: 24px;
     margin-bottom: 20px; }
   .panel-text {
     margin-bottom: 15px; }
   .panel-fighter {
-    width: calc(25% - 5px); }
+    width: calc(20% - 5px); }
   .panel-image {
     width: 100%;
     height: 100%;
     object-fit: cover; }
+  @media screen and (max-width: 414px) {
+    .panel {
+      margin-bottom: 5px;
+      margin-right: 0; }
+      .panel-group {
+        height: 25%;
+        margin-right: 0; }
+      .panel-title {
+        font-size: 20px;
+        margin-bottom: 10px; }
+      .panel-text {
+        font-size: 14px;
+        margin-bottom: 10px; }
+      .panel-fighter {
+        width: 20%; } }
 
 @keyframes button {
   50% {
@@ -146,11 +199,16 @@ body {
     transform: scale(1); } }
 
 .btn {
-  font-size: 20px;
+  font-size: 24px;
   border: 2px solid #E4E4E4;
   border-radius: 5px;
   padding: 15px 20px;
-  position: relative; }
+  position: relative;
+  outline: none; }
+  @media screen and (max-width: 414px) {
+    .btn {
+      font-size: 20px;
+      padding: 10px 15px; } }
   .btn-inactive {
     cursor: not-allowed;
     background: -moz-radial-gradient(#DBD7D7, #717171);
@@ -163,27 +221,84 @@ body {
     background: radial-gradient(#C85353, #642A2A); }
     .btn-active.animated {
       animation: button 1s ease-out infinite; }
-  .btn::before, .btn::after {
-    content: "";
+  .btn-command {
+    width: 25%;
+    margin-right: 15px; }
+    .btn-command:last-child {
+      margin-right: 0; }
+    .btn-command-wrapper {
+      display: flex;
+      justify-content: center; }
+    @media screen and (max-width: 414px) {
+      .btn-command {
+        width: 30%;
+        margin-right: 10px; } }
+  .btn-lethal {
+    display: none;
     position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0;
+    top: 50%;
     left: 0;
-    border-radius: 5px;
-    background-color: #C85353;
-    border: 1px solid #642A2A;
-    z-index: 100;
-    transform: translate3d(0, 0, 0); }
-  .btn::before {
-    animation: button 2s ease-out infinite; }
-  .btn::after {
-    animation: button 2s ease-out 1s infinite; }
+    transform: translate(0, -50%);
+    font-size: 36px;
+    border: none;
+    background: none; }
+    @media screen and (max-width: 414px) {
+      .btn-lethal {
+        font-size: 24px; } }
+
+.cutin {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); }
+  .cutin.show {
+    animation: cutin 2s ease-out; }
+  .cutin-window {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%; }
+    .cutin-window .img {
+      height: 500px;
+      object-fit: contain;
+      object-position: 50% -50%;
+      z-index: 2; }
+    .cutin-window.enemy {
+      background-color: #CC3535;
+      transform: translate(100%);
+      animation: cutin-window 2s ease-out; }
+    .cutin-window.lethal {
+      background: -moz-radial-gradient(#69FF2A, #155419);
+      background: -webkit-radial-gradient(#69FF2A, #155419);
+      background: radial-gradient(#69FF2A, #155419); }
+    .cutin-window .telop {
+      color: #CC3535;
+      background-color: #000;
+      padding: 15px; }
+      .cutin-window .telop .nickname {
+        font-size: 30px;
+        margin-bottom: 10px; }
+      .cutin-window .telop .name {
+        font-size: 36px; }
+    @media screen and (max-width: 414px) {
+      .cutin-window {
+        bottom: 35%; }
+        .cutin-window .img {
+          height: auto; }
+        .cutin-window .telop .nickname {
+          font-size: 20px;
+          margin-bottom: 10px; }
+        .cutin-window .telop .name {
+          font-size: 30px; } }
 
 @keyframes cutin {
   from {
     opacity: 0; }
-  25% {
+  15% {
     opacity: 1;
     z-index: 3; }
   90% {
@@ -193,7 +308,7 @@ body {
     z-index: -1;
     opacity: 0; } }
 
-@keyframes cutin-enemy {
+@keyframes cutin-window {
   from {
     transform: translate(100%);
     opacity: 0; }
@@ -207,63 +322,36 @@ body {
     transform: translate(-100%);
     opacity: 0; } }
 
-.cutin {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); }
-  .cutin.show {
-    animation: cutin 2s ease-out; }
-  .cutin-enemy {
-    transform: translate(100%);
-    animation: cutin-enemy 2s ease-out;
-    position: absolute;
-    top: 100px;
-    left: 0;
-    width: 100%;
-    background-color: #CC3535; }
-    .cutin-enemy .img {
-      height: 500px;
-      object-fit: contain;
-      object-position: 50% -50%;
-      z-index: 2; }
-    .cutin-enemy .telop {
-      color: #CC3535;
-      background-color: #000;
-      padding: 15px; }
-      .cutin-enemy .telop .nickname {
-        font-size: 30px;
-        margin-bottom: 10px; }
-      .cutin-enemy .telop .name {
-        font-size: 36px; }
-
-.gauge {
-  width: 100%;
-  height: 20px;
-  background-color: #fff;
-  border: 3px solid #DADADA;
-  border-radius: 20px; }
-  .gauge-remain {
-    width: calc(100% - 2px);
-    height: calc(100% - 2px);
-    border: 1px solid #707070; }
-    .gauge-remain-hp {
-      background: -moz-linear-gradient(#F8F080, #B8AF3C);
-      background: -webkit-linear-gradient(#F8F080, #B8AF3C);
-      background: linear-gradient(#F8F080, #B8AF3C); }
-    .gauge-remain-rethal {
-      background: -moz-linear-gradient(#45DF34, #D8FFD2);
-      background: -webkit-linear-gradient(#45DF34, #D8FFD2);
-      background: linear-gradient(#45DF34, #D8FFD2); }
-
 .battle-window {
   height: 700px;
+  background-size: cover;
   position: relative;
-  padding-left: 15px;
-  padding-right: 15px; }
+  padding: 0 15px;
+  overflow: hidden; }
+  @media screen and (max-width: 414px) {
+    .battle-window {
+      height: 65%;
+      padding: 0 5px; } }
+  .battle-window::before {
+    content: '';
+    filter: blur(2px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+  .battle-window.stage-1::before {
+    background-image: url("../img/background01.jpg"); }
+  .battle-window.stage-2::before {
+    background-image: url("../img/background02.jpg"); }
+  .battle-window.stage-3::before {
+    background-image: url("../img/background03.jpg"); }
+  .battle-window.stage-4::before {
+    background-image: url("../img/background04.jpg"); }
+  .battle-window.stage-5::before {
+    background-image: url("../img/background05.jpg"); }
+  .battle-window.stage-6::before {
+    background-image: url("../img/background06.jpg"); }
   .battle-window .enemy-info {
     display: flex;
     justify-content: space-between;
@@ -271,15 +359,24 @@ body {
     margin-bottom: 5px; }
     .battle-window .enemy-info .name, .battle-window .enemy-info .hp {
       display: block;
-      font-size: 24px; }
+      font-size: 24px;
+      filter: drop-shadow(2px 2px 2px #000); }
+      @media screen and (max-width: 414px) {
+        .battle-window .enemy-info .name, .battle-window .enemy-info .hp {
+          font-size: 14px; } }
   .battle-window .enemy-img {
     height: 100%;
     top: 0;
     left: 0;
     position: absolute;
-    object-fit: contain; }
+    object-fit: contain;
+    filter: drop-shadow(5px 5px 5px #000); }
+    .battle-window .enemy-img.damaged {
+      animation: damaged .1s ease-out .3s 5; }
+    .battle-window .enemy-img.beaten {
+      animation: beaten .5s ease-out; }
   .battle-window .history {
-    height: 150px;
+    height: 180px;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -289,34 +386,179 @@ body {
     background: linear-gradient(#B6B4B4, #5B5A5A);
     border: 3px solid #DADADA;
     border-radius: 5px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 0 15px;
     padding: 10px;
     overflow-y: scroll; }
     .battle-window .history-text {
-      font-size: 18px;
-      line-height: 27px;
+      font-size: 20px;
+      line-height: 30px;
       text-align: left; }
+    @media screen and (max-width: 414px) {
+      .battle-window .history {
+        height: 18%;
+        margin-left: 5px;
+        margin-right: 5px;
+        padding: 5px; }
+        .battle-window .history-text {
+          font-size: 14px;
+          line-height: 19.2px; } }
 
-.status-window {
+@keyframes damaged {
+  0% {
+    transform: translate(0px, 0px) rotateZ(0deg); }
+  25% {
+    transform: translate(2px, 2px) rotateZ(1deg); }
+  50% {
+    transform: translate(0px, 2px) rotateZ(0deg); }
+  75% {
+    transform: translate(2px, 0px) rotateZ(-1deg);
+    opacity: .7; }
+  100% {
+    transform: translate(0px, 0px) rotateZ(0deg); } }
+
+@keyframes beaten {
+  from {
+    transform: translate(0, 0); }
+  to {
+    transform: translate(0, 100%); } }
+
+.gauge {
+  width: 100%;
+  height: 35px;
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 5px solid #DADADA;
+  border-radius: 20px;
+  position: relative; }
+  @media screen and (max-width: 414px) {
+    .gauge {
+      height: 20px;
+      border: 3px solid #DADADA; } }
+  .gauge-remain {
+    box-sizing: border-box;
+    height: 100%;
+    border: 1px solid #707070;
+    border-radius: 20px; }
+    .gauge-remain-hp {
+      background: -moz-linear-gradient(90deg, #F8F080, #B8AF3C);
+      background: -webkit-linear-gradient(90deg, #F8F080, #B8AF3C);
+      background: linear-gradient(90deg, #F8F080, #B8AF3C); }
+      .gauge-remain-hp.pinch {
+        background: -moz-linear-gradient(90deg, #FEB9AE, #FF2300);
+        background: -webkit-linear-gradient(90deg, #FEB9AE, #FF2300);
+        background: linear-gradient(90deg, #FEB9AE, #FF2300); }
+    .gauge-remain-mp {
+      background: -moz-linear-gradient(90deg, #45DF34, #D8FFD2);
+      background: -webkit-linear-gradient(90deg, #45DF34, #D8FFD2);
+      background: linear-gradient(90deg, #45DF34, #D8FFD2); }
+  .gauge .number {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 24px;
+    color: #4E4E4E;
+    z-index: 2; }
+    @media screen and (max-width: 414px) {
+      .gauge .number {
+        font-size: 14px; } }
+
+.fighter-info {
+  height: 18%;
   display: flex;
   justify-content: space-between;
-  padding: 15px; }
-  .status-window .fighter-face {
-    width: 35%; }
-  .status-window .fighter-status {
-    width: 65%; }
+  padding: 20px; }
+  @media screen and (max-width: 414px) {
+    .fighter-info {
+      padding: 5px; } }
+  .fighter-info-face {
+    width: 30%;
+    position: relative; }
+    .fighter-info-face.limit-break {
+      background: -moz-radial-gradient(#69FF2A, #155419);
+      background: -webkit-radial-gradient(#69FF2A, #155419);
+      background: radial-gradient(#69FF2A, #155419); }
+  .fighter-info-status {
+    width: 70%;
+    padding-left: 15px; }
+    .fighter-info-status .about {
+      display: flex;
+      justify-content: space-between;
+      height: 60%; }
+      .fighter-info-status .about .fighter {
+        text-align: left; }
+        .fighter-info-status .about .fighter .nickname {
+          font-size: 24px;
+          margin-bottom: 5px; }
+        .fighter-info-status .about .fighter .name {
+          font-size: 36px; }
+      .fighter-info-status .about .record .number {
+        font-size: 36px;
+        margin-bottom: 5px; }
+      .fighter-info-status .about .record .index {
+        font-size: 20px; }
+      @media screen and (max-width: 414px) {
+        .fighter-info-status .about .fighter .nickname {
+          font-size: 14px;
+          margin-bottom: 5px; }
+        .fighter-info-status .about .fighter .name {
+          font-size: 24px; }
+        .fighter-info-status .about .record .number {
+          font-size: 30px; }
+          .fighter-info-status .about .record .number .unit {
+            font-size: 24px; }
+        .fighter-info-status .about .record .index {
+          font-size: 14px; } }
+    .fighter-info-status .parameter {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      margin-bottom: 15px; }
+      .fighter-info-status .parameter .index {
+        width: 20%;
+        font-size: 30px; }
+    @media screen and (max-width: 414px) {
+      .fighter-info-status .parameter {
+        margin-bottom: 5px; }
+        .fighter-info-status .parameter .index {
+          text-align: left;
+          width: 25%;
+          font-size: 20px; } }
+
+.effect-attack {
+  position: absolute;
+  width: 100px;
+  opacity: 0;
+  filter: blur(2px);
+  transition: .3s; }
+  .effect-attack.left {
+    top: 50%;
+    left: 10%;
+    transform: rotate(-160deg); }
+    .effect-attack.left.attacked {
+      transform: translate(300%, -150%) scale3d(2, 2, 2) rotate(20deg);
+      filter: blur(0);
+      opacity: 1; }
 
 .footer {
-  height: 80px;
-  position: relative; }
+  width: 100%;
+  height: 100px;
+  text-align: center; }
   .footer .link_anime {
+    font-size: 20px;
     display: block;
     position: absolute;
+    bottom: 5px;
     left: 50%;
-    bottom: 10px;
     transform: translate(-50%); }
   .footer .link_start {
-    top: 10px; }
-    .footer .link_start::before {
-      border: 1px solid #CC3535; }
+    font-size: 20px;
+    margin-top: 10px; }
+  @media screen and (max-width: 414px) {
+    .footer {
+      height: 8%; }
+      .footer .link_anime {
+        font-size: 14px;
+        white-space: nowrap; }
+      .footer .link_start {
+        font-size: 14px; } }
